--- a/manifest.yaml
+++ b/manifest.yaml
@@ -7,7 +7,7 @@ title: "Unknown"
 # Service version - accepts up to four digits, where the last confirms to revisions necessary for StartOS - see documentation: https://github.com/Start9Labs/emver-rs. This value will change with each release of the service. 
 version: 1.0.0
 # Release notes for the update - can be a string, paragraph or URL
-release-notes: "A fallback package for serving an icon."
+release-notes: "Initial release."
 # The type of license for the project. Include the LICENSE in the root of the project directory. A license is required for a Start9 package.
 license: mit
 # The Start9 wrapper repository URL for the package. This repo contains the manifest file (this), any scripts necessary for configuration, backups, actions, or health checks (more below). This key must exist. But could be embedded into the source repository. 
@@ -23,7 +23,7 @@ build: ["make"]
 # Human readable descriptors for the service. These are used throughout the StartOS user interface, primarily in the marketplace.
 description:
   # This is the first description visible to the user in the marketplace.
-  short: Fallback service
+  short: Fallback service for dependency metadata
   # This description will display with additional details in the service's individual marketplace page
   long: |
     Fallback service to serve an icon and title in the case that a package's dependency metadata cannot be found.
